--- a/.env.variables
+++ b/.env.variables
@@ -1,7 +1,7 @@
 # GitHub
-SOURCE_ADMIN_USERNAME=
-TARGET_ORGANIZATION=
+SOURCE_ADMIN_USERNAME=Skanchi09
+TARGET_ORGANIZATION=sam-org2
 
 # GHES - Target
-TARGET_ADMIN_USERNAME=
-TARGET_HOST=
+TARGET_ADMIN_USERNAME=Skanchi09
+TARGET_HOST=github.com
