--- a/.github/workflows/shared-github-enterprise-cloud-gei.yml
+++ b/.github/workflows/shared-github-enterprise-cloud-gei.yml
@@ -137,7 +137,9 @@ jobs:
         with:
           result-encoding: string
           script: |
-            return '${{ needs.prepare.outputs.migration-type }}' === 'Production' ? '--lock-source-repo' : ''
+            const migrationType = '${{ needs.prepare.outputs.migration-type }}';
+            const lockSelection = '${{ fromJson(needs.prepare.outputs.parsed-issue).lock_source_repo }}';
+            return migrationType === 'Production' && lockSelection === 'Yes' ? '--lock-source-repo' : '';
 
       - name: Setup Node
         uses: actions/setup-node@v3
